// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Matches Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FAFAFA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  font-size: 0.625rem;
  -webkit-letter-spacing: 0.17px;
  -moz-letter-spacing: 0.17px;
  -ms-letter-spacing: 0.17px;
  letter-spacing: 0.17px;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches large avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8F9FA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 5rem;
  width: 5rem;
}

.c3 {
  font-size: 1.5rem;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches medium avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8F9FA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 3rem;
  width: 3rem;
}

.c3 {
  font-size: 1rem;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches mobile Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FAFAFA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 2rem;
  width: 2rem;
}

.c3 {
  font-size: 0.75rem;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches mobile large avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8F9FA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 4.5rem;
  width: 4.5rem;
}

.c3 {
  font-size: 1.5rem;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches mobile medium avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8F9FA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 3rem;
  width: 3rem;
}

.c3 {
  font-size: 1rem;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches mobile small avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8F9FA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 2.5rem;
  width: 2.5rem;
}

.c3 {
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.23px;
  -moz-letter-spacing: 0.23px;
  -ms-letter-spacing: 0.23px;
  letter-spacing: 0.23px;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;

exports[`Avatar Matches small avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8F9FA;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: #57666E;
}

.c1 {
  height: 2rem;
  width: 2rem;
}

.c3 {
  font-size: 0.75rem;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<div>
  <div
    aria-label="AB avatar"
    class="c0 c1"
    role="img"
  >
    <span
      class="c2 c3"
      data-testid="avatar-initials"
    >
      AB
    </span>
  </div>
</div>
`;
